# mcmc_sampler

./: CMakeLists.txt  library.cpp  vcpkg.json.nw
cmake/: PatchOpenMPApple.cmake
include/: mcmc_sampler.hpp
tests/: CMakeLists.txt  TestCatch.cpp  TestConcepts.cpp  library.h
